# ot-harjoitustyo-Jatynjala

./: .coveragerc  .gitignore  README.md  kysymykset.db  pyproject.toml  tasks.py  tietokanta_skeema.sql
Dokumentaatio/: Ajankaytto.md  Kayttoohje.md  Vaatimusmaarittely.md  arkkitehtuuri.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/htmlcov/: index.html  src_maksukortti_py.html  src_tests___init___py.html  src_tests_maksukortti_test_py.html  status.json
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: Tietokannan_kasittely.py  logiikka.py  main.py  pelaaja_rajapinta.py  pelaajarajapinta.py  pelinjatkaminen.py  pelivalikko.py  tiedostonkasittely.py  tietokannankasittely.py
src/Kayttoliittyma/: main.py  pelaaja_rajapinta.py  pelivalikko.py
src/tests/: logiikka_test.py
