[tool.poetry]
name = "maksukortti"
version = "0.1.0"
description = ""
authors = ["Jatynjala <johannestynjala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = "^5.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
